<resources>
    <string name="app_name">Streamlane garage</string>
    <string name="slide_heading4">Discover Mechanic
        <br>Nearby You</br>
         </string>
    <string name="slide_description4">Looking for a garage you can trust for a auto
        <br>service or car repair? Using the Streamlane,</br>
        <br>you can find a garage near you.</br></string>
    <string name="slide_Button">Get Started</string>
    <string name="get_otp">Get OTP</string>
    <string name="verify_phone"><br>We need to verify \n</br> your phone</string>
    <string name="verify_Number">Verify Number</string>
    <string name="number">We have sent you an SMS with a code to number +971 2 xxxxxxx</string>
    <string name="resend_otp">Didn`t receive the OTP?</string>
    <string name="get_started">Get Started</string>
    <string name="otp_heading">Enter your phone number</string>
    <string name="otp_desc">Please enter your mobile number.\n
        <br>You will receive a code to verify mobile \n</br>
        <br>number.</br></string>
    <string name="today_08_30_am">Today,08:30 AM</string>
    <string name="esther_berry">Esther Berry</string>
    <string name="vehicle_service">Vehicle Service</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="qutation_management">Qutation Management</string>
    <string name="you_have_5_open_requests">You have 5 open Requests</string>
    <string name="preferred_service_date_range">Preferred Service Date Range</string>
    <string name="choose_verification">Choose verification type</string>
    <string name="send_sms">Send SMS</string>
    <string name="send_email">Send Email</string>
    <string name="go_back">←Go back</string>
    <string name="username">John Doe</string>
    <string name="userprofile_email">johndoe@example.com</string>
    <string name="user_email">johndoe@example.com</string>
    <string name="skip">Skip</string>
    <string name="create_account">Create New Account</string>
    <string name="add_profile">Add profile image</string>
    <string name="account_desc">Join the community of over one million people</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="email">Email Address</string>
    <string name="addressP">Address</string>
    <string name="terms">By clicking Sign up you agree to our Terms and Conditions</string>
    <string name="create_password">Create Your Password</string>
    <string name="Confirm_btn">Confirm</string>
    <string name="sign_in">Sign In</string>
    <string name="email_mobile">E-Mail or Mobile</string>
    <string name="Log_in_btn">Log-in</string>
    <string name="password">Password</string>
    <string name="forget_password">Forgot password?</string>
    <string name="notification">Notification</string>
    <string name="user">User</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="your_work_profile">Your Work Profile</string>
    <string name="profile_desc">Your information will be share with our Expert team who will verify your identity.</string>
    <string name="upload_garage_image">Upload Garage Image</string>
    <string name="profile_instruction">Your image should is a friendly and inviting image. Clearly identifies your \n<br>business</br> </string>
    <string name="address">Address</string>
    <string name="owner_name">Owner Name</string>
    <string name="garage_name">Garage Name</string>
    <string name="email_p">Email</string>
    <string name="basic_informations">Basic Informations</string>
    <string name="basic_info_garage">Xpress Auto has been the leader in automotive repair in the Triad area for twenty years. continuing the outstanding level of service Triad area residents expect from our</string>
    <string name="select_aminities">select Aminities</string>
    <string name="_24_7_service">24/7 Service</string>
    <string name="review_desc">Simply dummy text of the printing and typeset industry. Lorem Ipsum has been the industry’s standard dummy text ever since the 1500s.</string>
    <string name="slide_heading1">How It Works</string>
    <string name="slide_heading2">How It Will Be Helpful For You</string>
    <string name="slide_heading3">Our Customers And Garages</string>
    <string name="slide_description2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas suscipit iaculis ullamcorper. Morbi ac mauris eleifend, pretium turpis ut, orci.</string>
    <string name="slide_description3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas suscipit iaculis ullamcorper. Morbi ac mauris eleifend, pretium turpis ut, orci.</string>
    <string name="message_link">Message</string>
    <string name="payment_method">Payment Method</string>
    <string name="profile">Profile</string>
    <string name="about_streamlan">About Streamlan</string>
    <string name="help_support"><![CDATA[Help & support]]></string>
    <string name="privacy_policy"><![CDATA[Privacy & Policy]]></string>
    <string-array name="prefer_hours">
        <item>Morning</item>
        <item>Evening</item>
        <item>Both</item>
    </string-array>
    <string name="searchbar">Search</string>
    <string name="choose_service">Choose Service</string>
    <string name="choose_type_service">Choose type of service you are looking for</string>
    <string name="continue_btn">Continue</string>
    <string name="brake_service_S">Brake Service</string>
    <string name="engine_S">Engine</string>
    <string name="maintenance_schedule_S">Maintenance Schedule</string>
    <string name="oil_and_filter_S">Oil and Filter service</string>
    <string name="others">Others</string>
    <string name="synthetic_oil">Synthetic Oil</string>
    <string name="synthetic_blend">Synthetic Blend Oil/ High Mileage</string>
    <string name="electronics">Electronics</string>
    <string name="service_summary">Service Summary</string>
    <string name="bmw_x5">BMW x5</string>
    <string name="_625fedf66a80">625fedf66a80</string>
    <string name="quota_submitted">Quota Submitted</string>
    <string name="quota_submitted_desc">Your service quote is submitted successfully! Veiw service quotes from providers</string>
    <string name="view_quotes">View Quotes</string>
    <string name="services_requested">Services Requested</string>
    <string name="oil_and_filter_servicess">Oil and Filter service - Synthetic Engine Oil</string>
    <string name="add_additional_service">Add additional service</string>
    <string name="location_ss">Location</string>
    <string name="location_addres_tem">21, Alex Davidson Avenue, Opposite Omegatron, Vicent Smith Quarters, UAE</string>
    <string name="change_location">Change Location</string>
    <string name="note">Note</string>
    <string name="preferred_date_range">Preferred date Range</string>
    <string name="preferred_hours">Preferred Hours</string>
    <string name="request_quote">Request Quote</string>
    <string name="select_your_vehicle_s_make">Select your vehicle\'s make</string>
    <string name="select_your_vehicle_s_trim">Select your vehicle\'s trim</string>
    <string name="basic_info_desc">Gresasy Elbo Auto Repair has been the leader in automotive repair in the Triad area for twenty years. continuing the outstanding level of service Triad area residents expect from our</string>
    <string name="aminities">Aminities</string>
    <string name="wifi">Wifi</string>
    <string name="warranties_and_certifications">Warranties and Certifications</string>
    <string name="warranty">Warranty</string>
    <string name="address_warranty">12 mth/12K mi. ( whichever comes first) for parts and labour</string>
    <string name="business_hours_g">Business Hours</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="book_services">Book Services</string>
    <string name="let_s_start">Let`s Start</string>
    <string name="start_button">Get Started</string>
    <string name="request_diagnosis_desc">Your diagnose request is submitted successfully! View quotes from provider</string>
    <string name="view_diagnosis_quotes">View Diagnosis Quotes</string>
    <string name="view_history">View History</string>
    <string name="view_history_desc">Your service quote has been saved in services history. You can view it again in completed history tab.</string>
    <string name="tuesday">Tuesday</string>
    <string name="others_information">Your work profile</string>
    <string name="availability_hours">Availability hours</string>
    <string name="day">Day</string>
    <string name="time">Time</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="send_request_for_approval">Send request for approval</string>
    <string name="wednesday">Wednesday</string>
    <string name="quotes">Quotes</string>
    <string name="booking">Booking</string>
    <string name="earning">Earning</string>
    <string name="add">ADD</string>
    <string name="country">Country</string>
    <string name="cctv">CCTV</string>
    <string name="loaner_car">Loaner Car</string>
    <string name="shuttle_service">Shuttle Service</string>
    <string name="license_county">License County</string>
    <string name="license_of_state">License of State</string>
    <string name="license_number">License Number</string>
    <string name="vat_number">VAT number</string>
    <string name="_12_06_2022">12 06 2022</string>
    <string name="specialization">Specialization</string>
    <string name="select_specialization">Select Specialization</string>
    <string name="add_more">Add More</string>
    <string name="mcontinue">Continue</string>
    <string name="condition">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia,
        looked up one of the more obscure Latin words, consectetur, From a Lorem Ipsum passage,
        and going through the cites of the word in classical literature, discovered the undoubtable source.
        Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, Richard McClintock, a Latin professor at Hampden-Sydney College in</string>
    <string name="services">Services</string>
    <string name="promotions">Promotions</string>
    <string name="bank_account">Bank Account</string>
    <string name="review">Reviews</string>
    <string name="steamlane_v1_0">Steamlane V1 0</string>
    <string name="change_bank_account">Change Bank Account</string>
    <string name="account_number">Account Number</string>
    <string name="_10033020304050607080">10033020304050607080</string>
    <string name="online">online</string>
    <string name="invoice">Invoice</string>
    <string name="cancel">Cancel</string>
    <string name="service_requested">Service Requested</string>
    <string name="payment_method_tex">PAYMENT METHOD</string>
    <string name="master_card_ending">Master Card ending</string>
    <string name="receipt_photo">Receipt photo</string>
    <string name="today_feb_20_2020">Today - Feb 20,2020</string>
    <string name="withdraw_to_bank">Withdraw to bank:</string>
    <string name="first_bank">First Bank</string>
    <string name="samuel_smith">Samuel Smith</string>
    <string name="estimated_date">Estimated service completion date</string>
</resources>