<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/rounded"
        android:layout_margin="10dp"
        android:backgroundTint="@color/white"
        >

        <TextView
            android:id="@+id/tvname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/esther_berry"
            android:gravity="center"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:textSize="24sp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            />

        <TextView
            android:id="@+id/tvtime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvname"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:text="@string/today_08_30_am"
            android:textSize="22sp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="60dp"
             android:gravity="center" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvtime"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:text="@string/vehicle_service"
            android:textColor="@color/white"
            android:background="@drawable/rounded"
            android:backgroundTint="@color/orange"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp" />
    </RelativeLayout>

</RelativeLayout>