<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/started"
    tools:context=".Common.GetStarted">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:gravity="center"
            android:layout_margin="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/slide_heading4"
                android:id="@+id/text_heading"
                android:layout_alignParentStart="true"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:layout_marginBottom="12dp"
                android:layout_alignParentEnd="true"
                android:fontFamily="@font/hk_grotesk_bold"
                android:gravity="start"
                android:textSize="37sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:id="@+id/text_desc"
                android:padding="5dp"
                android:layout_below="@id/text_heading"
                android:fontFamily="@font/hk_grotesk_medium"
                android:text="@string/slide_description4"
                android:textSize="16sp"
                android:textColor="@color/white"/>

            <Button
                android:id="@+id/get_start_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_desc"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="30dp"
                android:background="@drawable/custom_button"
                android:text="@string/get_started"
                android:textAllCaps="false"
                android:padding="20dp"
                android:fontFamily="@font/dm_sans_bold"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </RelativeLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>