<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded"
        android:backgroundTint="@color/white"
        android:padding="15dp"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/estimated_date"
            android:id="@+id/extimate_text"
            android:fontFamily="@font/hk_grotesk_medium"
            android:textSize="16sp"
            android:textColor="@color/black_light"
            android:layout_marginStart="15dp"
            android:paddingTop="30dp"/>

        <include layout="@layout/sample_date_time"
            android:layout_below="@id/extimate_text"
            android:id="@+id/date_sample"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_below="@id/date_sample">

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/confirm_date_time"
                android:background="@drawable/rounded"
                android:layout_alignParentStart="true"
                android:fontFamily="@font/hk_grotesk_semi_bold"
                android:text="@string/Confirm_btn"
                android:layout_marginEnd="5dp"
                android:layout_toStartOf="@id/view"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="19sp" />
            <View
                android:id="@+id/view"
                android:layout_height="1dp"
                android:layout_width="0dp"
                android:layout_centerHorizontal="true"
                />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/view"
                android:layout_marginStart="5dp"
                android:background="@drawable/rounded"
                android:layout_alignParentEnd="true"
                android:backgroundTint="@color/orange"
                android:fontFamily="@font/hk_grotesk_semi_bold"
                android:padding="10dp"
                android:text="@string/skip"
                android:textAllCaps="false"
                android:id="@+id/skip_date_time"
                android:textColor="@color/white"
                android:textSize="19sp" />

        </RelativeLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>