<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Common.OTP_Verify">





    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="2350px"
        android:background="@drawable/bottomsheet"
        android:id="@+id/Relativeotp"
        android:backgroundTint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">


        <View
            android:layout_width="100px"
            android:layout_height="20px"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="170dp"
            android:layout_marginTop="40dp"
            android:background="@color/gray"
            android:layout_marginEnd="170dp"
            android:padding="30dp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="237dp"
        android:layout_height="76dp"
        android:layout_marginTop="140dp"
        android:fontFamily="@font/hk_grotesk_bold"
        android:text="@string/verify_phone"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView4"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:text="@string/number"
        android:textAlignment="center"
        android:fontFamily="@font/hk_grotesk_semi_bold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/second_RL"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/second_otp"
            android:text="00:36"
            android:inputType="time"
            android:layout_alignParentStart="true"
            android:textColor="@color/orange"
            android:gravity="center"
            android:textSize="16sp"
            android:fontFamily="@font/hk_grotesk_regular"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" Seconds"
            android:layout_toEndOf="@id/second_otp"
            android:textColor="@color/orange"
            android:gravity="center"
            android:textSize="16sp"
            android:fontFamily="@font/hk_grotesk_regular"/>
    </RelativeLayout>




    <com.chaos.view.PinView
        android:id="@+id/pin_view"
        style="@style/PinWidget.PinView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:cursorVisible="true"
        android:inputType="number"
        app:itemCount="4"
        android:padding="5dp"
        app:itemHeight="50dp"
        app:itemRadius="5dp"
        app:itemWidth="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/second_RL"
        app:lineColor="@color/black" />

    <Button
        android:id="@+id/verify_number_btn"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/rounded"
        android:text="@string/verify_Number"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pin_view" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/verify_number_btn"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/do_not"
            android:text="@string/resend_otp"
            android:layout_alignParentStart="true"
            android:textColor="@color/black"
            android:gravity="center"
            android:textSize="16sp"
            android:fontFamily="@font/hk_grotesk_regular"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" resend"
            android:layout_toEndOf="@id/do_not"
            android:textColor="@color/orange"
            android:gravity="center"
            android:textSize="16sp"
            android:fontFamily="@font/hk_grotesk_regular"/>
    </RelativeLayout>



</androidx.constraintlayout.widget.ConstraintLayout>