<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Common.Login.ProfileStep1">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/work_profile"
                android:text="@string/your_work_profile"
                android:gravity="center"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:fontFamily="@font/hk_grotesk_bold"
                android:padding="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/work_profile_desc"
                android:gravity="center"
                android:text="@string/profile_desc"
                android:textSize="16sp"
                android:layout_below="@id/work_profile"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:textColor="@color/black"
                android:fontFamily="@font/hk_grotesk_regular"/>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/work_profile_desc"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded"
                android:backgroundTint="@color/white"
                android:padding="20dp"
                android:layout_margin="15dp"
                android:layout_below="@id/work_profile_desc"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:id="@+id/garage_image"
                    android:src="@drawable/garage_pic"
                    android:background="@drawable/white_rounded"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/doted_border"
                    android:layout_marginTop="25dp"
                    android:padding="10dp"
                    android:id="@+id/upload_garage_img"
                    android:orientation="horizontal">
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ring"
                        android:text="+"
                        android:textColor="@color/orange"
                        android:textSize="20sp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/upload_garage_image"
                        android:textColor="@color/orange"
                        android:textSize="17sp"
                        android:fontFamily="@font/hk_grotesk_semi_bold"/>
                </LinearLayout>
            </LinearLayout>

            </ScrollView>

        </RelativeLayout>




</androidx.constraintlayout.widget.ConstraintLayout>